# specinfer_QNN

common/: arg.cpp  common.h
examples/: CMakeLists.txt
examples/simple/: simple.cpp
examples/simple-qnn/: CMakeLists.txt  simple-qnn.cpp
examples/speculative/: speculative.cpp
examples/speculative-qnn/: CMakeLists.txt  speculative-qnn.cpp
include/: llama.h
scripts/: qnn_adb_push.sh
src/: CMakeLists.txt  llama-context.cpp  llama-context.h
src/QNN/: binary_provider.cpp  io_alloc.cpp  io_alloc.h  llm_decode_runner.cpp  llm_decode_runner.h  llm_decode_runner_multi_context.cpp  llm_input_preparer.cpp  llm_input_preparer.h  llm_kv_cache_manager.cpp  llm_kv_cache_manager.h  llm_kv_cache_mapper.h  llm_output_processor.cpp  llm_output_processor.h  llm_stats.h  model_params.h  qnn_loader.cpp  qnn_loader.h  qnn_qnnjson.cpp  qnn_tensor_util.cpp  qnn_tensor_util.h  tokenizer_llama.cpp
src/backup/: binary_provider.h  llm_decode_runner.cpp  llm_decode_runner.h  llm_decode_runner_multi_context.cpp  llm_input_preparer.cpp  llm_input_preparer.h  llm_kv_cache_manager.cpp  llm_kv_cache_manager.h  llm_kv_cache_mapper.cpp  llm_output_processor.cpp  model_params.cpp  qnn_loader.cpp  qnn_loader.h  qnn_qnnjson.cpp  qnn_qnnjson.h  tokenizer_llama.h
tools/main/: main.cpp
